--- a/gw/components/wb_dp_ram/Bender.yml
+++ b/gw/components/wb_dp_ram/Bender.yml
@@ -6,7 +6,7 @@ package:
   name: wb_dp_ram
 
 sources:
-  - target: all(memory, vivado)
+  - target: memory_vivado
     files:
      - ../../../sw/projects/cmem_to_flash_vector/cmem.mem
 
