--- a/gw/components/usb_hid_host/Bender.yml
+++ b/gw/components/usb_hid_host/Bender.yml
@@ -13,7 +13,7 @@ sources:
   - target: verilator
     files:
      - lint.vlt
-  - target: memory
+  - target: any(memory_vivado, memory_verilator)
     files:
      - ../../../sub/usb_hid_host/src/usb_hid_host_rom.hex
   - target: any(verilator, vivado)
