--- a/gw/projects/audio_dac_test/Bender.yml
+++ b/gw/projects/audio_dac_test/Bender.yml
@@ -14,7 +14,7 @@ sources:
   - target: prj_constraints
     files:
       - constrs/Arty-A7-35-Master.xdc
-  - target: memory
+  - target: any(memory_vivado, memory_verilator)
     files:
     - rtl/sin_table.mem
   - target: any(verilator, vivado)
