--- a/gw/projects/dfx_test/Bender.yml
+++ b/gw/projects/dfx_test/Bender.yml
@@ -17,7 +17,7 @@ sources:
   - target: dfx_constraints
     files:
       - ../boxlambda_top/constrs/vs0_pblock.xdc
-  - target: arty-a7-100
+  - target: vivado
     defines:
       VRAM_SIZE_BYTES: 131072
       DPRAM_SIZE_BYTES: 262144
@@ -41,8 +41,24 @@ sources:
     files:
       - ../boxlambda_top/rtl/boxlambda_top.sv
   - target: verilator
+    defines:
+      VRAM_SIZE_BYTES: 131072
+      DPRAM_SIZE_BYTES: 262144
+      NO_MODPORT_EXPRESSIONS: ~
+      DEBUG_MODULE_ACTIVE: ~
+      YM2149: ~
+      SDSPI: ~
+      DRAM: ~
+      VERA: ~
+      PICORV_DMA: ~
+      USB_HID:  ~
+      SPIFLASH: ~
+      I2C: ~
+      DFX: ~
+      #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - sim/sim_main.cpp
+      - ../boxlambda_top/rtl/boxlambda_top.sv
       - ../../components/spiflash/sim/flashsim.cpp
       - ../boxlambda_top/sim/sim_main.sv
       - ../boxlambda_top/lint.vlt
