script support for multiple RPs

--- a/gw/components/vs0_j1b/CMakeLists.txt
+++ b/gw/components/vs0_j1b/CMakeLists.txt
@@ -20,9 +20,15 @@ if(BL_TARGET_FPGA STREQUAL "arty-a7-100")
   # given below results in a vs0_j1b_bit target being defined. Building that target results in a DFX partial bitstream
   # of the vs0_j1b component.
   gw_rm_rules_dfx(
-    COMPONENT_NAME vs0_j1b
+    COMPONENT_NAMES 
+      vs0_j1b
+      vs1_vera
+      vs2_ym2149
     #Specify where in the SoC, this component plugs into.
-    VS_INST boxlambda_soc_inst/vs0_inst
+    VS_INSTS 
+      boxlambda_soc_inst/GENERATE_VS0_MODULE.vs0_inst
+      boxlambda_soc_inst/GENERATE_VS1_MODULE.vs1_inst
+      boxlambda_soc_inst/GENERATE_VS2_MODULE.vs2_inst
     #Specify the reference project definign the static portion of the DFX build.
     REF_DFX_PROJECT dfx_test
   )
