--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -18,11 +18,10 @@ function(add_flash_sw_target _tgt)
   )
 endfunction()
 
-#Set link-for-internal-memory settings for given target and add byproduct command generating a .mem file.
+#Link given target using given linker script and add byproduct command generating a .mem file.
 function(link_and_create_mem_file _tgt _link_script)
   target_link_libraries(${_tgt} bootstrap)
 
-  #Link-for-internal-memory implies linking in the bootstrap object library.
   target_link_options(${_tgt}
         PRIVATE
             # Don't use Picolibc's crt0. We provide our own crt0 in
