Additional bus master port for vs0

--- a/gw/components/vs0_stub/CMakeLists.txt
+++ b/gw/components/vs0_stub/CMakeLists.txt
@@ -24,12 +24,8 @@ if(BL_TARGET_FPGA STREQUAL "arty-a7-100")
   gw_rm_rules_dfx(
     COMPONENT_NAMES 
       vs0_stub
-      vs1_vera
-      vs2_ym2149
     VS_INSTS
-      boxlambda_soc_inst/GENERATE_VS0_MODULE.vs0_inst
-      boxlambda_soc_inst/GENERATE_VS1_MODULE.vs1_inst
-      boxlambda_soc_inst/GENERATE_VS2_MODULE.vs2_inst
+      boxlambda_soc_inst/vs0_inst
     REF_DFX_PROJECT dfx_test
   )
 endif()
