boxlambda_dfx project

--- a/gw/components/vs0_stub/CMakeLists.txt
+++ b/gw/components/vs0_stub/CMakeLists.txt
@@ -26,7 +26,7 @@ if(BL_TARGET_FPGA STREQUAL "arty-a7-100")
       vs0_stub
     VS_INSTS
       boxlambda_soc_inst/GENERATE_VS0_MODULE.vs0_inst
-    REF_DFX_PROJECT dfx_test
+    REF_DFX_PROJECT boxlambda_dfx
   )
 endif()
 endif()
