--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -472,6 +472,6 @@ endif()
 add_subdirectory(reset_test)
 if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
   add_subdirectory(j1b_test)
-  add_subdirectory(dfx_test)
+  add_subdirectory(boxlambda_dfx)
 endif()
 
